--- a/style/style.css
+++ b/style/style.css
@@ -1,29 +1,27 @@
-* {
+*{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'IBM Plex Sans', sans-serif;
-    font-family: 'Poppins', sans-serif;
-    font-family: 'Quicksand', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    font-family: 'Varela Round', sans-serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'Quicksand', sans-serif;
+font-family: 'Roboto', sans-serif;
+font-family: 'Varela Round', sans-serif;
 
 }
-
-.box {
-    min-height: 100vh;
+.box{
     width: 100%;
-
+    height: auto;
+    border: 5px soid rgb(0, 0, 0);
     background-image: linear-gradient(rgba(5, 5, 5, 0.511), rgba(21, 21, 22, 0.2)),
-        url("../img/bac-img.jpg");
-
-    background-size: cover;
-
-    background-position: center;
-
+                  url("../img/bac-img.jpg");
+    
+    background-size:cover;
+    background-position: 100% 50%;
+    padding-bottom: 50px;
 }
-
-.nav {
+.nav
+{
     width: 100%;
     height: 15vh;
     display: flex;
@@ -31,16 +29,14 @@
     align-items: center;
     padding: 0 4%;
 }
-
-.nav img {
+.nav img{
     width: 100px;
     height: 50px;
 }
-
-.nav button {
-    background: none;
+.nav button{
+    background:none;
     border: none;
-    color: #A8AFBD;
+    color:#A8AFBD;
     font-size: 14px;
     font-weight: 700;
     height: 40px;
@@ -49,23 +45,20 @@
     position: relative;
     transition: all .3s ease-in-out;
 }
-
-.nav button:hover {
+ .nav button:hover{
     border-radius: 8px;
     height: 40px;
     width: 80px;
     background-color: #363c47;
 }
-
-.bigconten {
+.bigconten{
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     z-index: 3;
 }
-
-.contener {
+.contener{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -73,14 +66,12 @@
     height: auto;
     align-items: center;
 }
-
-.contener img {
+.contener img{
     height: 140px;
     width: 600px;
     margin-bottom: 15px;
 }
-
-.btn-1 {
+.btn-1{
     color: #040405;
     width: 200px;
     background-color: #00ed82;
@@ -95,14 +86,13 @@
     transition: all .3s ease-in-out;
 
 }
-
-.btn-1:hover {
+.btn-1:hover{
     transition-delay: 0.1s;
     transition-property: background-color;
     background-color: #00ed8275;
 }
 
-.p2 {
+.p2{
     color: #00ed82;
     font-family: 'Graphik Web', 'Graphik', sans-serif;
     font-size: 12px;
@@ -111,34 +101,29 @@
     padding: 8% 0 25px 0;
     text-transform: uppercase
 }
-
-.contener h2 {
-    color: #fff;
-    font-size: 24px;
-    margin-bottom: 10px;
-    font-family: 'Graphik Web', 'Graphik', sans-serif;
+.contener h2{
+  color: #fff;
+  font-size: 24px;
+  margin-bottom: 10px;
+  font-family: 'Graphik Web', 'Graphik', sans-serif;
 }
-
-.p1 {
+.p1{
     color: #ffffff99;
     font-size: 10px;
 }
-
-.contener a {
+.contener a{
     color: #fff;
     margin-top: 15px;
 }
-
-.smain {
+.smain{
     width: 100%;
     height: auto;
-    background-color: #040405;
+    background-color:#040405;
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
 }
-
-.sbox {
+.sbox{
     width: 56%;
     height: auto;
     color: #fff;
@@ -149,65 +134,56 @@
     align-items: center;
     justify-content: center;
 }
-
-.sp1 {
+.sp1{
     color: #00ed82;
     margin: 80px 0 20px 0;
 }
-
-.sbox h1 {
+.sbox h1{
     font-size: 50px;
     font-weight: 500;
     margin-bottom: 30px;
 }
-
-.fmain {
+.fmain{
     width: 100%;
-    background-color: #040405;
+    background-color:#040405;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     padding: 20px;
 }
-
-.fbox {
+.fbox{
     height: 450px;
     width: 300px;
     margin: 10px;
     background-position: 50% 0%;
 }
 
-.fbox-1 {
+.fbox-1{
     background-image: linear-gradient(rgba(18, 18, 19, 0.3), rgba(190, 190, 183, 0.3)),
-        url(../img/img-1.jpg);
+    url(../img/img-1.jpg);
 }
-
-.fbox-2 {
+.fbox-2{
     background-image: linear-gradient(rgba(12, 12, 12, 0.3), rgba(141, 141, 133, 0.3)),
-        url(../img/img-2.jpg);
+    url(../img/img-2.jpg);
 }
-
-.fbox-3 {
+.fbox-3{
     background-image: linear-gradient(rgba(7, 7, 7, 0.3), rgba(136, 136, 133, 0.3)),
-        url(../img/img-3.jpg);
+    url(../img/img-3.jpg);
+ }
+.fbox-4{
+     background-image: linear-gradient(rgba(16, 16, 17, 0.3), rgba(119, 119, 114, 0.3)),
+     url(../img/img-4.jpg);
 }
 
-.fbox-4 {
-    background-image: linear-gradient(rgba(16, 16, 17, 0.3), rgba(119, 119, 114, 0.3)),
-        url(../img/img-4.jpg);
-}
-
-.fbox p {
+.fbox p{
     color: #fff;
     margin: 25px 10px 0px 20px;
 }
-
-.fbox h2 {
+.fbox h2{
     color: #fff;
     margin: 10px 10px 0px 20px;
 }
-
-.main5 {
+.main5{
     width: 100%;
     background-color: #040405;
     color: #fff;
@@ -216,8 +192,7 @@
     align-items: center;
     justify-content: center;
 }
-
-.box5 {
+.box5{
     width: 59%;
     height: 100%;
     position: relative;
@@ -229,36 +204,29 @@
     justify-content: center;
     text-align: center;
 }
-
-.p53 {
-    font-size: 9px;
+.p53{
+font-size: 9px;
 }
-
-.box5 a {
+.box5 a{
     color: #fff;
 }
-
-.p51 {
+.p51{
     color: #00ed82;
     margin-bottom: 20px;
 }
-
-.box5 h1 {
+.box5 h1{
     font-size: 45px;
     margin-bottom: 30px;
 
-}
-
-.p52 {
+}.p52{
     font-size: larger;
     margin-bottom: 30px;
 }
-
-.p533 {
+.p533{
     margin-bottom: 20px;
 }
 
-.main6 {
+.main6{
     width: 100%;
     height: 140vh;
     background-image: url(../img/img-6.jpg);
@@ -269,8 +237,7 @@
     align-items: center;
     padding-left: 20%;
 }
-
-.box6 {
+.box6{
     width: 500px;
     height: 70vh;
     display: flex;
@@ -278,8 +245,7 @@
     text-align: left;
     color: #fff;
 }
-
-.box6 span {
+.box6 span{
     margin-bottom: 30px;
     width: 87px;
     padding-bottom: 15px;
@@ -287,8 +253,7 @@
     font-weight: 600;
     border-bottom: 5px solid white;
 }
-
-.box6 h1 {
+.box6 h1{
     font-size: 45px;
     margin-bottom: 20px;
 }
@@ -300,107 +265,90 @@
     border-radius: 50px;
     background-color: #fff;
 }
-
-.p61 {
+.p61{
     margin-bottom: 15px;
 }
-
-.p62 {
+.p62{
     font-size: 9px;
     margin-top: 10px;
 }
-
-.main7 {
+.main7{
     width: 100%;
     color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #0B0C0F;
+    background-color:#0B0C0F;
     font-size: larger;
 }
-
-.box7 {
+.box7{
     width: 90%;
     text-align: center;
     margin-top: 50px;
 }
-
-.box7 h1 {
-    font-size: 45px;
+.box7 h1{
+  font-size: 45px;
     margin-bottom: 20px;
 }
-
-.box7 p {
+.box7 p{
     margin-bottom: 5px;
 }
-
-.box7 h4 {
+.box7 h4{
     margin-bottom: 80px;
 }
-
-.main8 {
+.main8{
     width: 100%;
     height: auto;
-    background-color: #0B0C0F;
+    background-color:#0B0C0F;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-.box8 {
+.box8{
     width: 70%;
     display: flex;
-    border-top: 1px solid rgba(255, 255, 255, 0.7);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+    border-top: 1px  solid rgba(255, 255, 255, 0.7);
+    border-bottom: 1px  solid rgba(255, 255, 255, 0.7);
 }
-
-.resb8 {
+.resb8{
     display: flex;
     width: 60%;
 }
-
-.box81 {
+.box81{
     width: 40%;
     height: auto;
     color: white;
     display: flex;
     flex-direction: row;
 }
-
-.box82 {
+.box82{
     width: 50%;
     height: 40vh;
     display: flex;
     flex-direction: row;
 }
-
-.box83 {
+.box83{
     width: 50%;
     height: 39.6vh;
     display: flex;
     flex-direction: row;
 }
-
-.img81 {
+.img81{
     width: 60px;
     height: 40px;
 }
-
-.img82 {
+.img82{
     width: 170px;
-    height: 40px;
+    height:40px ;
 }
-
-.box80 {
+.box80{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
 }
-
-.box80 div {
+.box80 div{
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -408,9 +356,8 @@
     align-items: center;
     text-align: center;
 }
-
-.p821 {
-    font-size: 11px;
+.p821{
+    font-size:11px;
     width: 136px;
     height: 31px;
     background-color: #00ed82;
@@ -421,13 +368,11 @@
     border-radius: 20px;
     margin-bottom: 20px;
 }
-
-.box80 h4 {
+.box80 h4{
     margin-top: 5px;
     margin-bottom: 5px;
-}
-
-.btn821 {
+} 
+.btn821{
     border: none;
     width: 270px;
     height: 52px;
@@ -437,25 +382,22 @@
     border-radius: 5px;
     margin-top: 10px;
 }
-
-.box83 {
+.box83{
     background-color: #272c34;
 }
-
-.p822:nth-child(2) {
-    margin-top: 48px;
+.p822:nth-child(2)
+{
+  margin-top: 48px;
 }
-
-.box9 {
+.box9{
     width: 70%;
     height: 10vh;
     background-color: aqu;
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+    border-bottom: 1px  solid rgba(255, 255, 255, 0.7);
 }
-
-.box91 {
+.box91{ 
     width: 40%;
     height: 10vh;
     color: white;
@@ -463,18 +405,16 @@
     flex-direction: row;
     display: flex;
     align-items: center;
-
+    
 }
-
-.box92 {
+.box92{
     width: 30%;
     height: 10vh;
     color: white;
     display: flex;
-    flex-direction: row;
-}
+    flex-direction: row;}
 
-.box93 {
+.box93{
     width: 30%;
     height: 9.8vh;
     color: white;
@@ -482,285 +422,253 @@
     flex-direction: row;
     background-color: #272c34;
 }
-
-.box90 {
+.box90{
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
 }
-
-.main9 {
+.main9{
     width: 100%;
     height: 117vh;
-    background-color: #0B0C0F;
+    background-color:#0B0C0F;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-.box91 p {
-    font-size: 14px;
+.box91 p{
+    font-size:14px;
 }
-
-.position {
+.position{
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-
+    
 }
-
-.box10 {
+.box10{
     width: 70%;
     height: 14vh;
     display: flex;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+    border-bottom: 1px  solid rgba(255, 255, 255, 0.7);
 }
-
-.box10 p {
+.box10 p{
     color: #fff;
     font-size: 9px;
     width: 50%;
     padding: 5px;
 }
 
-.footer {
+.footer{
     position: absolute;
     width: 100%;
-    height: auto;
+    height:auto;
     background-color: #c2d2d3;
 
 }
-
-.mainfootc {
+.mainfootc{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
-
-}
-
-.parentof6 {
+    
+} 
+.parentof6{
     width: 80%;
     height: 60%;
     margin-top: 50px;
     border-bottom: 2px solid rgba(95, 92, 92, 0.507);
     display: flex;
 }
-
-.parentof3 {
+.parentof3{
     display: none;
 }
-
-.child {
+.child{
     width: 16%;
     height: 40%;
-
-
+    
+   
 }
-
-.child p {
+.child p{
     padding: 10px;
     color: #586174;
 }
-
-.child h5 {
+.child h5{
     padding-left: 10px;
 }
-
-.child2,
-.child3,
-.child4 {
+.child2, .child3, .child4{
     margin-top: 19px;
 }
-
-.base {
+.base{
     width: 80%;
     height: 40%;
     margin-top: 10px;
     display: flex;
     flex-direction: column;
 }
-
-.baseimge {
+.baseimge{
     padding-left: 30px;
 }
-
-.baseimg {
+.baseimg{
     padding-left: 30px;
 }
-
-.face {
+.face{
     margin: 20px 0 30px 0;
 }
-
-.last {
+.last{
     display: flex;
     flex-wrap: wrap;
 }
-
-.last a {
+.last a{
     width: 300px;
     margin: 10px;
-
-
+  
+    
     text-decoration: none;
     color: #586174;
 }
-
 /* Responsive */
 @media screen and (max-width:700px) {
-
-    .contener {
+    
+    .contener{
         width: 90%;
     }
-
-    .contener img {
+    
+    .contener img{
         width: 100%;
         height: 80%;
     }
-
-    .btn-1 {
+    .btn-1{
         width: 100%;
     }
-
-    .sbox {
+    .sbox{
         width: 90%;
     }
-
-    .sbox h1 {
+    .sbox h1{
         font-size: 40px;
     }
-
-    .box5 {
+    .box5{
         width: 90%;
     }
-
-    .p51 h1 {
+    .p51 h1{
         font-size: 40px;
     }
-
-    .main6 {
-        height: auto;
+    .main6{
+        height:auto;
         background-image: url(../img/resback.jpg);
         margin: 0;
         padding: 0;
         align-items: flex-start;
         padding-top: 100px;
         justify-content: center;
-
+        
     }
-
-    .box6 {
+    .box6{
         width: 90%;
         height: auto;
         text-align: center;
         align-items: center;
         padding-bottom: 100%;
-
+    
     }
-
-    .parentof6 {
-
+    .parentof6{
+        
         display: none;
         ;
     }
-
-    .parentof3 {
+    .parentof3{
         display: block;
         width: 100%;
         padding: 20px 5%;
-
+        
     }
-
-    .parentof3 div {
+    .parentof3 div{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        border-top: 1px solid rgba(19, 17, 17, 0.7);
-        height: 40px;
-        border-bottom: 1px solid rgba(26, 23, 23, 0.7);
+        border-top: 1px  solid rgba(19, 17, 17, 0.7);
+       height: 40px;
+        border-bottom: 1px  solid rgba(26, 23, 23, 0.7);
     }
-
-
-}
-
-@media screen and (max-width:300px) {
-    .fbox {
+    
+    
+    }
+    
+    @media screen and (max-width:300px){
+        .fbox{
         width: 50%;
+        }
+        .fmain {
+            display: flex;
+            align-items: center;
+        }
+
+    
     }
-
-    .fmain {
-        display: flex;
-    }
-
-
-}
-
-@media screen and (max-width:1100px) {
-    .box8 {
-        width: 100%;
-        height: auto;
-        flex-direction: column;
-        align-items: center;
-
-    }
-
-    .box80 {
-        height: auto;
-        padding: 20px 0;
-    }
-
-    .resb8 {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        border-top: 1px solid rgba(255, 255, 255, 0.7);
-    }
-
-    .btn821 {
-        border: none;
-        width: 100%;
-        height: 52px;
-        background-color: #f2faf6;
-        color: #101111;
-        font-size: large;
-        border-radius: 5px;
-        margin-top: 10px;
-    }
-
-    .box81 {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-    }
-
-    .b811 {
-        width: 50%;
-
-    }
-
-    .img82 {
-        width: 170px;
-    }
-
-    .box83 {
-        background: none;
-        border-left: 1px solid rgba(255, 255, 255, 0.7);
-    }
-
-
-    .box9 {
+    
+    @media screen and (max-width:1100px){
+        /* .fmain {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+        }
+         */
+        .box8{
+            width: 100%;
+            height: auto;
+           flex-direction: column;
+          align-items: center;
+            
+        }
+        .box80{
+            height: auto;
+            padding: 20px 0;
+        }
+        .resb8{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            border-top: 1px  solid rgba(255, 255, 255, 0.7);
+        }
+        .btn821{
+            border: none;
+            width: 100%;
+            height: 52px;
+            background-color: #f2faf6;
+            color: #101111;
+            font-size: large;
+             border-radius: 5px;
+             margin-top: 10px;
+        }
+      
+        .box81{
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+        }
+        .b811{
+            width: 50%;
+    
+        }
+        .img82{
+            width: 170px;
+        }
+        .box83{
+            background: none;
+            border-left: 1px  solid rgba(255, 255, 255, 0.7);
+        }
+    
+        
+       .box9{
         width: 90%;
+       }
+    
     }
-
-}
-
-@media screen and (max-width:300px) {
-    .img82 {
-        width: 90%;
+    
+    @media screen and (max-width:300px){
+        .img82{
+            width: 90%;
+        }
+    
     }
-
-}
