--- a/src/RollDice.css
+++ b/src/RollDice.css
@@ -38,7 +38,7 @@
 
 @media only screen and (max-device-width: 480px) {
     .btn {
-        font-size: 12em;
+        width: 12em;
         background: #5f9ea0;
     }
 }
