--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,9 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    max-height: 100vh;
     background-color: rgb(248, 242, 242);
+    overflow-y: hidden;
 }
 
 .App h4 {
